duck/test/fail/duplicate_definition.duck
main = testAll
x = 1
x = 2
